# mkgif

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.github/workflows/: build.yaml  ci.yaml  release.yml
src/: main.rs
