[package]
name = "mkgif"
version = "0.1.0"
authors = ["Junpei Kawamoto <kawamoto.junpei@gmail.com>"]
edition = "2021"
description = "Create an animation GIF from the given image files"
repository = "https://github.com/jkawamoto/mkgif"
license-file = "LICENSE"

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
image = "0.24.6"
clap = { version = "4.3.3", features = ["derive"] }
indicatif = "0.17.5"
