[package]
name = "mkgif"
version = "0.1.0"
authors = ["Junpei Kawamoto <kawamoto.junpei@gmail.com>"]
edition = "2021"
description = "Create an animation GIF from the given image files"
homepage = "https://github.com/jkawamoto/mkgif"
repository = "https://github.com/jkawamoto/mkgif"
license = "MIT"
keywords = ["gif", "animation"]
categories = ["command-line-utilities", "multimedia::images"]


[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
image = "0.25.1"
clap = { version = "4.5.4", features = ["derive"] }
indicatif = "0.17.8"
