[package]
name = "mkgif"
version = "0.1.0"
authors = ["Junpei Kawamoto <kawamoto.junpei@gmail.com>"]
edition = "2021"
description = "Create an animation GIF from the given image files"
homepage = "https://github.com/jkawamoto/mkgif"
repository = "https://github.com/jkawamoto/mkgif"
license = "MIT"
keywords = ["gif", "animation"]
categories = ["command-line-utilities", "multimedia::images"]


[dependencies]
anyhow = { version = "1.0.86", features = ["backtrace"] }
image = "0.25.1"
clap = { version = "4.5.4", features = ["derive"] }
indicatif = "0.17.8"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.14.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "jkawamoto/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Publish jobs to run in CI
pr-run-mode = "plan"
